beginning of sphinx doc
git-svn-id: https://bioproj.extra.cea.fr/neurosvn/brainvisa/brainvisa-installer/trunk@63042 613412ce-1361-4b7a-93bf-a3c75af1bae4

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,3 +21,12 @@ BRAINVISA_COPY_DIRECTORY( "${CMAKE_CURRENT_SOURCE_DIR}/share"
 
 # BRAINVISA_CREATE_CMAKE_CONFIG_FILES()
 
+find_package( Sphinx )
+
+if( SPHINX_FOUND )
+
+    BRAINVISA_GENERATE_SPHINX_DOC( "doc/sphinx"
+      "share/doc/brainvisa-installer-${BRAINVISA_PACKAGE_VERSION_MAJOR}.${BRAINVISA_PACKAGE_VERSION_MINOR}" )
+
+endif()
+
